namespaces/live.cloud-platform.service.justice.gov.uk/track-a-move-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: track-a-move-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_dev"
    cloud-platform.justice.gov.uk/application: "Track a Move"
    cloud-platform.justice.gov.uk/owner: "PECS: pecs-digital-tech@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-book-secure-move-api"
    cloud-platform.justice.gov.uk/team-name: "book-a-secure-move"
